--- a/software.html
+++ b/software.html
@@ -87,7 +87,7 @@
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/vonage/jobs/4258912002'>Job Application for Software Engineer III - Full Stack Developer at Vonage</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/vonage/jobs/4258912002'>Job Application for Software Engineer III - Full Stack Developer at Vonage</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -183,7 +183,7 @@
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/udemy/602998df-b175-4117-bb6e-f6067cc256d0'>Udemy - Software Engineer - Full Stack, Udemy for Business</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/udemy/602998df-b175-4117-bb6e-f6067cc256d0'>Udemy - Software Engineer - Full Stack, Udemy for Business</a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -195,7 +195,7 @@
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dtcc.referrals.selectminds.com/jobs/senior-software-engineer-2686'>Senior Software Engineer - DTCC Careers</a></h5> 
+<h5><a href='https://dtcc.referrals.selectminds.com/jobs/senior-software-engineer-2686'>Senior Software Engineer - DTCC Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -370,7 +370,7 @@ product requirements with Product Managers, architect and implement technical
 <p>3 days ago ... Brief Description We are looking for experienced C++/Linux software engineer to 
 expand our distributed file system team. The Position Nasuni is expanding its?...</p>
 <hr/>
-<h5><a href='http://fullcontact.applytojob.com/apply/FZJTrKZpfB/Software-Engineer-Foundation-Team'>Software Engineer, Foundation Team - FullContact - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fullcontact.applytojob.com/apply/FZJTrKZpfB/Software-Engineer-Foundation-Team'>Software Engineer, Foundation Team - FullContact - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -420,7 +420,7 @@ thrives on delivering exceptional quality and functionality to customers....</p>
 <p>Jul 18, 2019 ... The future is being built today, and Johnson Controls is making that future more 
 productive, more secure and more sustainable. We are harnessing the.....</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/liveramp/jobs/1767629'>Job Application for Software Engineer - Frontend at LiveRamp</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/liveramp/jobs/1767629'>Job Application for Software Engineer - Frontend at LiveRamp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
